[project]
name = "swarm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "async_lru",
    "numpy",
    "bittensor",
    "botocore",
    "aiobotocore",
    "ipykernel",
    "tiktoken",
    "torch",
    "transformers",
    "torchvision",
    "bittensor-cli"
]